Fixed 'Jiffi' logo center align bug for mobile
Changed the logo width to be absolute.

--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,7 @@ img.logo-footer {
 		padding:12px 8px 12px 8px;
 	}
 	.logo{
-		width:25%;
+		width:86px;
 	}
 	.img-banner-info h1{
 		font-size:2.2em;
